k8s/ferdium/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ferdium-route
  namespace: ferdium
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
  hostnames:
    - "ferdium.neffi.fr"
  rules:
    - backendRefs:
        - name: ferdium
          port: 3333
      matches:
        - path:
            type: PathPrefix
            value: /
